--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -26,9 +26,7 @@ menu__settings:
 # Hero Settings
 hero:
   hero__title: Hello, I’m Susann, a ceramic artist and the creator behind Liljen Ceramic Design.
-  hero__description: I create floral and coral-inspired wall installations alongside contemporary ceramic pieces. Some are functional, some are just here to look gorgeous. Every piece is handmade with patience, love, and a touch of magic. Each one is unique, ensuring every collector owns something truly one of a kind.
-Take a look around and bring a little art into your world!
-💛 Susann
+  hero__description: I create floral and coral-inspired wall installations alongside contemporary ceramic pieces. Some are functional, some are just here to look gorgeous. Every piece is handmade with patience, love, and a touch of magic. Each one is unique, ensuring every collector owns something truly one of a kind. Take a look around and bring a little art into your world! Love Susann from Liljen Ceramic Design
 
 
 
