About the artist Fast fertig

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # Site Settings
 title: Liljen Ceramic Design
-logo: /images/logo.png
+logo: '/images/logo.png'
 author: Susann Winter
 description: Contemporary Ceramic Artist
 
