--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -25,15 +25,18 @@ menu__settings:
 #-------------------------------
 # Hero Settings
 hero:
-  hero__title: Hello, I’m Susann, a ceramic artist and the creator behind Liljen Ceramic Design.
-  hero__description: I create floral and coral-inspired wall installations alongside contemporary ceramic pieces. Some are functional, some are just here to look gorgeous. Every piece is handmade with patience, love, and a touch of magic. Each one is unique, ensuring every collector owns something truly one of a kind. Take a look around and bring a little art into your world! Love Susann from Liljen Ceramic Design
+  hero__title: Welcome to Liljen Ceramic Design! 
+  hero__description: "Hello, I’m Susann, a ceramic artist and the creator behind Liljen Ceramic Design. I create floral and coral-inspired wall installations alongside contemporary ceramic pieces. Some are functional, some are just here to look gorgeous. 
+  Every piece is handmade with patience, love, and a touch of magic. Each one is unique, ensuring every collector owns something truly one of a kind. 
+  Take a look around and bring a little art into your world! 
+  Love Susann from Liljen Ceramic Design"
 
 
 
 #-------------------------------
 # Portfolio Settings
 portfolio:
-  portfolio__title: Portfolio
+  portfolio__title: Gallery 
   portfolio__gallery:
     - image: /images/gallery-01.jpg
       title: Samantha Gades
@@ -84,12 +87,12 @@ mailchimp:
 #-------------------------------
 # Footer Settings
 social:
-- {icon: "ion-logo-twitter", color: "#55acee", label: Twitter, link: "https://twitter.com"}
-- {icon: "ion-logo-facebook", color: "#3b5999", label: Facebook, link: "https://facebook.com"}
-- {icon: "ion-logo-pinterest", color: "#bd081c", label: Pinterest, link: "https://pinterest.com"}
-- {icon: "ion-logo-dribbble", color: "#ea4c89", label: Dribbble, link: "https://dribbble.com"}
-- {icon: "ion-logo-instagram", color: "#e4405f", label: Instagram, link: "https://instagram.com"}
-- {icon: "ion ion-logo-vimeo", color: "#1393cd", label: Vimeo, link: "https://vimeo.com"}
+#- {icon: "ion-logo-twitter", color: "#55acee", label: Twitter, link: "https://twitter.com"}
+- {icon: "ion-logo-facebook", color: "#3b5999", label: Facebook, link: "https://www.facebook.com/Liljen.Ceramic.Design"}
+#- {icon: "ion-logo-pinterest", color: "#bd081c", label: Pinterest, link: "https://pinterest.com"}
+#- {icon: "ion-logo-dribbble", color: "#ea4c89", label: Dribbble, link: "https://dribbble.com"}
+- {icon: "ion-logo-instagram", color: "#e4405f", label: Instagram, link: "https://www.instagram.com/liljenceramicdesign/"}
+#- {icon: "ion ion-logo-vimeo", color: "#1393cd", label: Vimeo, link: "https://vimeo.com"}
 
 # Example of adding a new link to the footer section - {icon: "ion-logo-github", color: "#24292e, label: Github, link: "https://github.com"}
 # Other icons can be found at https://ionicons.com/v4/
@@ -98,8 +101,10 @@ social:
 #-------------------------------
 # Contact Settings
 contact:
-  email: your@email.com # Add your email for contact form
-  description: Clancy comes with a built-in contact form, that you can use with Formspree service to handle up to 50 submissions per month for free. You could also easily switch to another contact form service if you want. # Add a description of your form.
+  email: hello@liljen.design# Add your email for contact form
+  description: "Studio location: Santa Cruz California"
+  
+  # Add a description of your form.
 
 # NOTE
 # Clancy comes with a built-in contact form, that you can use with Formspree service to handle up to 50 submissions per month for free. You could also easily switch to another contact form service if you want.
