--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # Site Settings
 title: Liljen Ceramic Design
-logo: '/images/logo.png'
+logo: '/images/logo.jpg'
 author: Susann Winter
 description: Contemporary Ceramic Artist
 
@@ -26,10 +26,11 @@ menu__settings:
 # Hero Settings
 hero:
   hero__title: Welcome to Liljen Ceramic Design! 
-  hero__description: "Hello, I’m Susann, a ceramic artist and the creator behind Liljen Ceramic Design. I create floral and coral-inspired wall installations alongside contemporary ceramic pieces. Some are functional, some are just here to look gorgeous. 
+  hero__description: "Hello, I’m Susann, a ceramic artist and the creator behind Liljen Ceramic Design. <br>I create floral and coral-inspired wall installations alongside contemporary ceramic pieces. Some are functional, some are just here to look gorgeous. 
   Every piece is handmade with patience, love, and a touch of magic. Each one is unique, ensuring every collector owns something truly one of a kind. 
   Take a look around and bring a little art into your world! 
-  Love Susann from Liljen Ceramic Design"
+  
+  <br><br>Love Susann from Liljen Ceramic Design"
 
 
 
@@ -38,7 +39,7 @@ hero:
 portfolio:
   portfolio__title: Gallery 
   portfolio__gallery:
-    - image: /images/gallery-01.jpg
+    - image: /images/product1.jpg
       title: Samantha Gades
       description: Brown photo frame beside wall <a href="https://unsplash.com/photos/8Od75hgzb9Y">Unsplash</a>
 
@@ -46,7 +47,7 @@ portfolio:
       title: Paula Vermeulen
       description: Gray mountain covered by mountain <a href="https://unsplash.com/photos/_f2m3mEkaaU">Unsplash</a>
 
-    - image: /images/gallery-03.jpg
+    - image: /images/product3.jpg
       title: Bench Accounting
       description: White wooden table near brown chair <a href="https://unsplash.com/photos/nvzvOPQW0gc">Unsplash</a>
 
@@ -58,11 +59,11 @@ portfolio:
       title: Luca Bravo
       description: White ribs in a facade against a white sky <a href="https://unsplash.com/photos/alS7ewQ41M8">Unsplash</a>
 
-    - image: /images/gallery-06.jpg
+    - image: /images/product4.jpg
       title: Isaac Benhesed
       description: Minimalist black coffee <a href="https://unsplash.com/photos/onLbXleIkds">Unsplash</a>
 
-    - image: /images/gallery-07.jpg
+    - image: /images/product5.jpg
       title: Water Journal
       description: Water Journal is a bi-annual publication exploring the beauty and complexity of all things water <a href="https://unsplash.com/photos/EbuaKnSm8Zw">Unsplash</a>
 
@@ -70,7 +71,7 @@ portfolio:
       title: Luca Bravo
       description: Worms eye view of city buildings <a href="https://unsplash.com/photos/a6x7YPiNxwI">Unsplash</a>
 
-    - image: /images/gallery-09.jpg
+    - image: /images/product9.jpg
       title: Books and Laptop
       description: Silver laptop computer with two books on the top <a href="https://unsplash.com/photos/fFIAKABImf4">Unsplash</a>
 
@@ -101,8 +102,11 @@ social:
 #-------------------------------
 # Contact Settings
 contact:
-  email: hello@liljen.design# Add your email for contact form
-  description: "Studio location: Santa Cruz California"
+  email: 123
+  # Add your email for contact form
+  description: 123
+#"Have questions? I’m here to help! <br><br>Feel free to reach out at hello@liljen.design - I love chatting about my work and helping you find the perfect piece.
+#<br><br>Thank you for supporting handmade art—your love for unique ceramics keeps my passion alive!"
   
   # Add a description of your form.
 
