--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   jekyll:
     container_name: clancy
     image: jekyll/builder:4.0
-    command: jekyll serve --watch --force_polling --verbose --livereload --host 0.0.0.0
+    command: jekyll serve --trace --watch --force_polling --verbose --livereload --host 0.0.0.0
     volumes:
       - .:/srv/jekyll:Z
     environment:
