SW done bis auf Artwork

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -47,7 +47,7 @@ portfolio:
       title: Ocean Inspired Bowls
       description: Bowls come in various sizes and colors. Explore the full collection or request a custom color! <br><a href="https://unsplash.com/photos/_f2m3mEkaaU">Discover more</a>
 
-    - image: /images/product3.jpg
+    - image: /images/product33.jpg
       title: White Porcelain Flower No 2
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="https://unsplash.com/photos/nvzvOPQW0gc">Discover more</a>
 
@@ -105,7 +105,7 @@ contact:
   email: 123
   # Add your email for contact form
   description: "Have questions? I’m here to help! <br><br>Feel free to reach out at hello@liljen.design - I love chatting about my work and helping you find the perfect piece.
-<br><br>Thank you for supporting handmade art—your love for unique ceramics keeps my passion alive!"
+<br><br>Thank you for supporting handmade art!"
   
   # Add a description of your form.
 
