verlinkung email eingefügt

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -109,7 +109,7 @@ social:
 contact:
   email: 123
   # Add your email for contact form
-  description: "Have questions? I’m here to help! <br><br>Feel free to reach out at hello@liljen.design - I love chatting about my work and helping you find the perfect piece.
+  description: "Have questions? I’m here to help! <br><br>Feel free to reach out at [hello@liljen.design](mailto:hello@liljen.design) - I love chatting about my work and helping you find the perfect piece.
 <br><br>Thank you for supporting handmade art!"
   
   # Add a description of your form.
