--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -41,38 +41,38 @@ portfolio:
   portfolio__gallery:
     - image: /images/product1.jpg
       title: Flower No. 4
-      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="https://unsplash.com/photos/8Od75hgzb9Y">Discover more</a>
+      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
     - image: /images/gallery2.jpg
-      title: Ocean Inspired Bowls
-      description: Bowls come in various sizes and colors. Explore the full collection or request a custom color! <br><a href="https://unsplash.com/photos/_f2m3mEkaaU">Discover more</a>
+      title: Ocean Bowls
+      description: Bowls come in various sizes and colors. Explore the full collection or request a custom color! <br><a href="blog/">Discover more</a>
 
     - image: /images/product33.jpg
-      title: White Porcelain Flower No 2
-      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="https://unsplash.com/photos/nvzvOPQW0gc">Discover more</a>
+      title: Flower No. 1
+      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
     - image: /images/gallery-04.jpg
-      title: Black Ceramic Roses
-      description: To display on any surface or to hang on a wall (completed with a hanging system)<br><a href="https://unsplash.com/photos/nDd3dIkkOLo">Discover more</a>
+      title: Roses No.2
+      description: To display on any surface or to hang on a wall (completed with a hanging system)<br><a href="blog/">Discover more</a>
 
     - image: /images/FortuneC0.jpg
-      title: Handmade Ceramic Fortune Cookies
-      description: The perfect way to deliver heartfelt messages for any occasion! <br><a href="https://unsplash.com/photos/alS7ewQ41M8">Discover more</a>
+      title: Fortune Cookies
+      description: The perfect way to deliver heartfelt messages for any occasion! <br><a href="blog/">Discover more</a>
 
     - image: /images/product4.jpg
-      title: Black Ceramic Flower No 3
-      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="https://unsplash.com/photos/onLbXleIkds">Discover more</a>
+      title: Succulent
+      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
     - image: /images/product5.jpg
-      title: White Porcelain Roses
-      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="https://unsplash.com/photos/EbuaKnSm8Zw">Discover more</a>
+      title: Roses No. 2
+      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
     - image: /images/Egg0.jpg
       title: Egg Cups
-      description: Egg cups, butter dishes, ornaments—oh my! Check out my other fun ceramic creations! <br><a href="https://unsplash.com/photos/a6x7YPiNxwI">Discover more fun ceramics</a>
+      description: Egg cups, butter dishes, ornaments—oh my! Check out my other fun ceramic creations! <br><a href="blog/">Discover more</a>
 
     - image: /images/product9.jpg
-      title: Black And White Porcelain Dahlia
+      title: Dahlia
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
       
 
