--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # Site Settings
 title: Liljen Ceramic Design
-logo: '/images/logo.jpg'
+logo: '/images/logorund750.jpg'
 author: Susann Winter
 description: Contemporary Ceramic Artist
 
@@ -52,7 +52,7 @@ portfolio:
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
     - image: /images/gallery-04.jpg
-      title: Roses No.2
+      title: Roses No. 2
       description: To display on any surface or to hang on a wall (completed with a hanging system)<br><a href="blog/">Discover more</a>
 
     - image: /images/FortuneC0.jpg
@@ -63,7 +63,7 @@ portfolio:
       title: Succulent
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
-    - image: /images/product5.jpg
+    - image: /images/Roses20.jpg
       title: Roses No. 2
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
@@ -84,8 +84,8 @@ portfolio:
 #-------------------------------
 # Subscribe Settings
 mailchimp:
-  mailchimp__title: Get updates and digital art inspiration # Add your Title
-  mailchimp__identifier: # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
+  mailchimp__title: Get updates and art inspiration # Add your Title
+  mailchimp__identifier: //design.us13.list-manage.com/subscribe/post?u=47bfd895db9476aa3a07fa7a1&amp;id=2f29b10ce3&amp;f_id=0081b8e1f0
   mailchimp__button__text: Subscribe # Add your button text.
   mailchimp__bg__color: "#f2eef8" # To change the color of the figure, add a hexadecimal color code (HEX). For example - "#f2eef8" (You can generate any color here - https://htmlcolorcodes.com/).
 
@@ -103,19 +103,18 @@ social:
 # Example of adding a new link to the footer section - {icon: "ion-logo-github", color: "#24292e, label: Github, link: "https://github.com"}
 # Other icons can be found at https://ionicons.com/v4/
 
-
 #-------------------------------
 # Contact Settings
 contact:
   email: 123
   # Add your email for contact form
-  description: "Have questions? I’m here to help! <br><br>Feel free to reach out at [hello@liljen.design](mailto:hello@liljen.design) - I love chatting about my work and helping you find the perfect piece.
+  description: "Have questions? I’m here to help! <br><br>Feel free to reach out at <a href=mailto:hello@liljen.design>hello@liljen.design</a>  - I love chatting about my work and helping you find the perfect piece.
 <br><br>Thank you for supporting handmade art!"
   
   # Add a description of your form.
 
 # NOTE
-# Clancy comes with a built-in contact form, that you can use with Formspree service to handle up to 50 submissions per month for free. You could also easily switch to another contact form service if you want.
+# Clancy comes with a built-in contact form, that you can use with   to handle up to 50 submissions per month for free. You could also easily switch to another contact form service if you want.
 
 
 #-------------------------------
