URL und Description

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,7 +7,7 @@ baseurl: "/website_susan"      # place folder name if the site is served in a su
 
 # Site Settings
 title: Liljen Ceramic Design
-logo: '/images/logorund180.jpg'
+logo: '/images/logogreen.jpg'
 author: Susann Winter
 description: Contemporary Ceramic Artist
 
