--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,13 +1,13 @@
 #-------------------------------
 #domain: kekec.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: "https://kekec.github.io"  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: "/website_susan"      # place folder name if the site is served in a subfolder
+#url: "https://kekec.github.io"  # the base hostname and protocol for your site, e.g. http://example.com
+#baseurl: "/website_susan"      # place folder name if the site is served in a subfolder
 
 
 
 # Site Settings
 title: Liljen Ceramic Design
-logo: '/images/logogreen.jpg'
+logo: '/images/logorund180.jpg'
 author: Susann Winter
 description: Contemporary Ceramic Artist
 
