Ändern Welcome Page

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -50,8 +50,8 @@ portfolio:
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
     - image: /images/gallery2.jpg
-      title: Ocean Bowls
-      description: Bowls come in various sizes and colors. Explore the full collection or request a custom color! <br><a href="blog/">Discover more</a>
+      title: Flower No. 2
+      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
     - image: /images/product33.jpg
       title: Flower No. 1
@@ -62,8 +62,8 @@ portfolio:
       description: To display on any surface or to hang on a wall (completed with a hanging system)<br><a href="blog/">Discover more</a>
 
     - image: /images/FortuneC0.jpg
-      title: Fortune Cookies
-      description: The perfect way to deliver heartfelt messages for any occasion! <br><a href="blog/">Discover more</a>
+      title: Succulent
+      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
     - image: /images/product4.jpg
       title: Succulent
@@ -73,9 +73,9 @@ portfolio:
       title: Roses No. 1
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
-    - image: /images/Egg0.jpg
-      title: Egg Cups
-      description: Egg cups, butter dishes, ornaments—oh my! Check out my other fun ceramic creations! <br><a href="blog/">Discover more</a>
+    - image: /images/Cloves0.jpg
+      title: Cloves
+      description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
     - image: /images/product9.jpg
       title: Dahlia
