Welcome Alle Bilder geändert

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -53,7 +53,7 @@ portfolio:
       title: Flower No. 2
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
-    - image: /images/product33.jpg
+    - image: /images/FlowerNo10.jpg
       title: Flower No. 1
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
@@ -61,7 +61,7 @@ portfolio:
       title: Roses No. 2
       description: To display on any surface or to hang on a wall (completed with a hanging system)<br><a href="blog/">Discover more</a>
 
-    - image: /images/FortuneC0.jpg
+    - image: /images/Succulent0.jpg
       title: Succulent
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
