Welcome Bilder ausgetauscht Final

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -49,11 +49,11 @@ portfolio:
       title: Flower No. 4
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
-    - image: /images/gallery2.jpg
+    - image: /images/FlowerNo10.jpg
       title: Flower No. 2
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
-    - image: /images/FlowerNo10.jpg
+    - image: /images/product3.jpg
       title: Flower No. 1
       description: To display on any surface or to hang on a wall (completed with a hanging system) <br><a href="blog/">Discover more</a>
 
